2025-02-11 Richard Frith-Macdonald <rfm@gnu.org>

	* ANNOUNCE:
	* BUGS:
	* INSTALL:
	* NEWS:
	* Source/DocMakefile:
	* Version:
	Updates for 0.32.0 release

2024-11-08 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSBrowser.h: Add dictionary to hold relationships.
	* Source/NSBrowser.m: Add logic in methods to support bindings,
	expose bindings in +initialize.
	* Source/NSTextFieldCell.m: Minor fix to NSTextField for displaying
	binding values.

2024-10-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSServicesManager.m: fix -laterDate: conditionals to be true
	only when file date has been updated (returned value != receiver).

2024-10-29 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSLayoutAnchor.h: Add missing include that is required after a change in base.
	* Source/NSTableView.m: Forward declare new methods.

2024-08-29 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSBundleAdditions.m: Quick fix for .gorm loading
	not returning top level objects.

2024-08-18 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSTreeController.h: Update header
	* Headers/AppKit/NSTreeNode.h: Update header
	* Source/GNUmakefile: Add new class
	* Source/GSBindingHelpers.h: Add NSString category
	* Source/GSControllerTreeProxy.[hm]: Proxy class
	for NSTreeController, a subclass of NSTreeNode.
	* Source/GSThemeDrawing.m: Optimize code a bit and
	add changes for bindings.
	* Source/GSXib5KeyedUnarchiver.m: Add support for new keys
	on NSTreeController.
	* Source/NSKeyValueBinding.m: Add new methods to
	GSKeyValueBinding
	* Source/NSOutlineView.m: Add support for bindings.
	* Source/NSTreeController.m: Implement new methods.
	* Source/NSTreeNode.m: Implement new methods

2024-07-25 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSBrowser.h: Add declarations for
	10.6 delegate methods for item-based browsers.
	* Source/NSBrowser.m: Add support for 10.6 item-based
	delegate methods.
